<b>Version 1.241</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Erstellung der Vorwärts/Rückwärts-Buttonlinks auf Tiefe 3 mit fehlender Playlistangabe</li>
</ul>
<b>Version 1.24</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Hilfestellung für Preview-Ordner eingefügt</li>
    <li>[<span style="color: blue">INTERFACE</span>] Media-Element ausgeblendet, solange keine Inhalte angezeigt werden</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Fehler beim Erstellen der Favoritenliste</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Verlinkungen des Next-Buttons gefixt</li>
</ul>
<b>Version 1.23</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Ladereihenfolge für Ladebalken angepasst um Weisses Bild zu verhindern</li>
    <li>[<span style="color: blue">INTERFACE</span>] Hilfe zum hinzufügen von Medien ergänzt</li>
    <li>[<span style="color: blue">INTERFACE</span>] Merken-Button verkleinert</li>
</ul>
<b>Version 1.22</b>:<br>
<ul>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Audiokontrollen werden nun konstant angezeigt</li>
    <li>[OPTIMIERUNG] Favoriten können nun ohne Unterbruch des Mediums hinzugefügt werden</li>
</ul>
<b>Version 1.21</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Hovereffekt bei Suchen-Button hinzugefügt</li>
    <li>[<span style="color: blue">INTERFACE</span>] Suchen-Button im Suchfeld hinzugefügt</li>
    <li>[<span style="color: blue">INTERFACE</span>] Ladebalken hinzugefügt</li>
</ul>
<b>Version 1.20</b>:<br>
<ul>
    <li>[<span style="color: red">FEATURE</span>] Speichern der Lautstärkeeinstellung zwischen den Videos/Musikdateien (Mindestlautstärke: 20%)</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Anzeigefehler bei 0 Suchresultaten</li>
    <li>[<span style="color: blue">INTERFACE</span>] Anpassung Standardlinkfarbe</li>